# ros2_px4_sim

./: CMakeLists.txt  README.md  package.xml
config/: px4_mavros_config.yaml  simulation.rviz
include/px4_offboard/: simple_traj.h
launch/: config.rviz  mavros_px4.launch  px4.launch.py  simulation.launch.py  start.sh
scripts/: sendPath.py
src/: offboard.cpp  rotationLidar_tool.cpp
